cmake_minimum_required(VERSION 3.25)
project(TP_ALG_CPP)

set(CMAKE_CXX_STANDARD 17)

add_executable(1.1.2 dz1/1.2.cpp)
add_executable(1.2.2 dz1/2.2.cpp)
add_executable(test test.cpp)
add_executable(bin_search bin_search.cpp)
add_executable(1.3.1 dz1/3.1.cpp)
add_executable(1.4.3 dz1/4.3.cpp)
add_executable(sem1 seminars/seminar1.cpp)
add_executable(1.5.2 dz1/5.2.cpp)
add_executable(3 rk1/3.cpp)
add_executable(1 rk1/1.cpp)
add_executable(2 rk1/2.cpp)
add_executable(1.6.3 dz1/6.3.cpp)
add_executable(1.7.3 dz1/7.3.cpp)
add_executable(2.1.2 dz2/1.2.cpp)
add_executable(2.2.1 dz2/2.1.cpp)
add_executable(2.4.1 dz2/4.1.cpp)
